[gd_scene load_steps=5 format=3 uid="uid://dnbihj6wf04l0"]

[ext_resource type="Script" path="res://ui/components/settings_menu.gd" id="1_qnkba"]
[ext_resource type="Script" path="res://ui/components/menu_tab_button.gd" id="4_cifa3"]
[ext_resource type="Texture2D" uid="uid://dij1fcvbhojrt" path="res://assets/misc_sprites/title_background.png" id="5_5wlbf"]
[ext_resource type="Script" path="res://ui/components/background.gd" id="6_51bn4"]

[node name="SettingsMenu" type="CanvasLayer" node_paths=PackedStringArray("initial_tab")]
process_mode = 3
script = ExtResource("1_qnkba")
initial_tab = NodePath("TabContainer/AudioSettings")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="."]
offset_right = 185.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="Background" type="TextureRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 448.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.72, 0.72)
mouse_filter = 0
texture = ExtResource("5_5wlbf")
expand_mode = 1
script = ExtResource("6_51bn4")

[node name="TabContainer" type="HBoxContainer" parent="."]
offset_top = 64.0
offset_right = 489.0
offset_bottom = 117.0

[node name="AudioSettings" type="Button" parent="TabContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../ControlButtonsContainer/BackButton")
theme_override_font_sizes/font_size = 32
text = "Audio Settings"
script = ExtResource("4_cifa3")

[node name="Menu" type="VBoxContainer" parent="TabContainer/AudioSettings"]
layout_mode = 0
offset_top = 56.0
offset_right = 619.0
offset_bottom = 96.0

[node name="MuteVolumeContainer" type="HBoxContainer" parent="TabContainer/AudioSettings/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioSettings/Menu/MuteVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Mute"

[node name="CheckButton" type="CheckButton" parent="TabContainer/AudioSettings/Menu/MuteVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 2.0

[node name="MainVolumeContainer" type="HBoxContainer" parent="TabContainer/AudioSettings/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioSettings/Menu/MainVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Main Volume"

[node name="HSlider" type="HSlider" parent="TabContainer/AudioSettings/Menu/MainVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.001

[node name="MusicVolumeContainer" type="HBoxContainer" parent="TabContainer/AudioSettings/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioSettings/Menu/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="TabContainer/AudioSettings/Menu/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.001

[node name="SFXVolumeContainer" type="HBoxContainer" parent="TabContainer/AudioSettings/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioSettings/Menu/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="TabContainer/AudioSettings/Menu/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
focus_neighbor_bottom = NodePath("../../../../../ControlButtonsContainer/ApplyButton")
max_value = 1.0
step = 0.001

[node name="DisplaySettings" type="Button" parent="TabContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../../ControlButtonsContainer/ApplyButton")
theme_override_font_sizes/font_size = 32
text = "Display Settings"
script = ExtResource("4_cifa3")

[node name="Menu" type="HBoxContainer" parent="TabContainer/DisplaySettings"]
visible = false
layout_mode = 0
offset_left = -235.0
offset_top = 56.0
offset_right = -120.0
offset_bottom = 96.0

[node name="LabelsContainer" type="VBoxContainer" parent="TabContainer/DisplaySettings/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/DisplaySettings/Menu/LabelsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Window Mode"

[node name="OptionsContainer" type="VBoxContainer" parent="TabContainer/DisplaySettings/Menu"]
layout_mode = 2

[node name="WindowModeOptionButton" type="OptionButton" parent="TabContainer/DisplaySettings/Menu/OptionsContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../../../ControlButtonsContainer/ApplyButton")

[node name="ControlButtonsContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.5
offset_top = -105.0
offset_right = 253.5
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0

[node name="ApplyButton" type="Button" parent="ControlButtonsContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../TabContainer/DisplaySettings")
theme_override_font_sizes/font_size = 32
text = "Apply"

[node name="RestoreDefaultsButton" type="Button" parent="ControlButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restore Defaults"

[node name="BackButton" type="Button" parent="ControlButtonsContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../../TabContainer/AudioSettings")
theme_override_font_sizes/font_size = 32
text = "Back"
